# backend/src/user/controller/user.api.ts
@@ -1,3 +1,5 @@
+import { IsEmail } from 'class-validator';
+
 export class LoggedInUserResponse {
   id: number;
 
@@ -6,4 +8,16 @@ export class LoggedInUserResponse {
   avatar_url: string;
 
   installations: number[];
+}
+
+export class UpdateEmailRequest {
+  @IsEmail()
+  email: string;
+
+  emailNotificationsEnabled: boolean;
+}
+
+export class SettingsResponse {
+  email?: string;
+  emailNotificationsEnabled: boolean;
 }
